Replace DatatypeConverter in Pbkdf2Django to support Java 9